--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,6 +1,8 @@
 .navigation {
   $large-screen: em(860) !default;
   $large-screen: $large-screen;
+  position: fixed;
+  width: 100%;
 
   // Mobile view
   .navigation-menu-button {
@@ -24,7 +26,7 @@
     float: left;
 
     img {
-      max-height: 2em;
+      height: 2em;
       padding-right: 1em;
     }
   }
