--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -38,11 +38,14 @@ header {
 }
 
 .splash-title {
-	color: white;
 	margin-top: 300px;
 	-webkit-animation-delay: 1s;
 	-moz-animation-delay: 1s;
 	animation-delay: 1s;
+
+	h1,h3 {
+		color: white;
+	}
 }
 
 a.splash-arrow {
